@@ -11,28 +11,25 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-
-        // Allow specific origins for security
-        config.setAllowedOrigins(List.of(
-            "http://localhost:5173",                    // Local development
-            "https://task-manager-frontend.onrender.com" // Deployed frontend
-        ));
-        
-        // For Postman testing (Postman sends null origin)
-        config.setAllowCredentials(true);               // Allow cookies if needed
-        
-        // Allowed methods and headers
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization")); // Expose JWT token header
-        config.setMaxAge(3600L); // Cache preflight response for 1 hour
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-
-        return source;
-    }
+@Bean
+public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration config = new CorsConfiguration();
+    
+    // ⚠️ ADD localhost:5173 and your actual frontend URL
+    config.setAllowedOrigins(Arrays.asList(
+        "http://localhost:5173",  // Your local development
+        "https://task-manager-frontend.onrender.com", // Your deployed frontend
+        "http://localhost:3000"   // If using different port
+    ));
+    
+    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    config.setAllowedHeaders(Arrays.asList("*"));
+    config.setAllowCredentials(false); // Set to false for simplicity
+    config.setMaxAge(3600L);
+    
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", config);
+    
+    return source;
+}
 }
